--- a/SQLFlowCore/SQLFlowCore.csproj
+++ b/SQLFlowCore/SQLFlowCore.csproj
@@ -17,7 +17,9 @@
     <PackageReference Include="Azure.Identity" Version="1.13.2" />
     <PackageReference Include="Azure.Messaging.EventGrid" Version="4.30.0" />
     <PackageReference Include="Azure.ResourceManager" Version="1.13.0" />
-    <PackageReference Include="Azure.ResourceManager.Automation" Version="1.1.0" />
+    <PackageReference Include="Azure.ResourceManager.Automation" Version="1.1.1" />
+    <PackageReference Include="Azure.ResourceManager.DataFactory" Version="1.7.0" />
+    <PackageReference Include="Azure.ResourceManager.EventGrid" Version="1.0.1" />
     <PackageReference Include="Azure.ResourceManager.KeyVault" Version="1.3.1" />
     <PackageReference Include="Azure.ResourceManager.Storage" Version="1.4.0" />
     <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.7.0" />
@@ -34,17 +36,12 @@
     <PackageReference Include="GenericParsing.Standard" Version="1.4.1" />
     <PackageReference Include="HtmlAgilityPack" Version="1.12.0" />
     <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
-    <PackageReference Include="Microsoft.Azure.Management.DataFactory" Version="9.3.0" />
-    <PackageReference Include="Microsoft.Azure.Management.EventGrid" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Azure.Management.Storage" Version="25.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.13.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="4.13.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.3" />
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.69.1" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.70.0" />
     <PackageReference Include="Microsoft.ML" Version="4.0.2" />
     <PackageReference Include="Microsoft.ML.AutoML" Version="0.22.2" />
-    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.24" />
-    <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure.Authentication" Version="2.4.1" />
     <PackageReference Include="Microsoft.SqlServer.Management.Assessment" Version="172.64.0" />
     <PackageReference Include="Microsoft.SqlServer.Management.SqlParser" Version="172.18.0" />
     <PackageReference Include="Microsoft.SqlServer.Server" Version="1.0.0" />
